force-app/main/default/objects/Properties_byGC__c/Properties_byGC__c.object-meta.xml
<CustomObject>
    <label>物件×GC</label>
    <nameField>
        <displayFormat>GC-{0000}</displayFormat>
        <label>物件×GC名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>