force-app/main/default/objects/Properties_byGC__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>物件×GC</relationshipLabel>
    <relationshipName>Account_ID</relationshipName>
    <type>Lookup</type>
</CustomField>