force-app/main/default/objects/Properties_byGC__c/fields/Design_Office_ID__c.field-meta.xml
<CustomField>
    <fullName>Design_Office_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>設計事務所ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>物件×GC (設計事務所ID)</relationshipLabel>
    <relationshipName>Account_ID2</relationshipName>
    <type>Lookup</type>
</CustomField>