force-app/main/default/objects/Properties_byGC__c/fields/GC_Progress_Status_BA__c.field-meta.xml
<CustomField>
    <fullName>GC_Progress_Status_BA__c</fullName>
    <label>GC攻略ステータス_BuildApp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>