force-app/main/default/objects/Properties_byGC__c/fields/MainGC_BA__c.field-meta.xml
<CustomField>
    <fullName>MainGC_BA__c</fullName>
    <formula>TEXT(Account_ID__r.DX_category__c)</formula>
    <label>注力GCフラグ_BuildApp</label>
    <type>Text</type>
</CustomField>