force-app/main/default/objects/Properties_byGC__c/fields/MainGC_CE__c.field-meta.xml
<CustomField>
    <fullName>MainGC_CE__c</fullName>
    <label>注力GCフラグ_セメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>