force-app/main/default/objects/Properties_byGC__c/fields/MainGC_EN__c.field-meta.xml
<CustomField>
    <fullName>MainGC_EN__c</fullName>
    <formula>TEXT( Account_ID__r.EN_Target__c )</formula>
    <label>注力GCフラグ_エンジ</label>
    <type>Text</type>
</CustomField>