force-app/main/default/objects/Properties_byGC__c/fields/MainGC_ST_z__c.field-meta.xml
<CustomField>
    <fullName>MainGC_ST_z__c</fullName>
    <formula>TEXT( Account_ID__r.ST_focustype_boukoubu__c )</formula>
    <label>注力GCフラグ_スチール_材販</label>
    <type>Text</type>
</CustomField>