force-app/main/default/objects/Properties_byGC__c/fields/Opportunity_ID_BA__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID_BA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SF_商談ID_BuildApp</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>物件×GC</relationshipLabel>
    <relationshipName>Opportunity_ID_BA</relationshipName>
    <type>Lookup</type>
</CustomField>