force-app/main/default/objects/Properties_byGC__c/fields/Opportunity_ID_EN__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID_EN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SF_商談ID_エンジ</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>物件×GC (SF_商談ID_エンジ)</relationshipLabel>
    <relationshipName>Opportunity_ID_EN</relationshipName>
    <type>Lookup</type>
</CustomField>