force-app/main/default/objects/Properties_byGC__c/fields/Opportunity_ID_ST__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID_ST__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SF_商談ID_スチール</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>物件×GC (SF_商談ID_スチール)</relationshipLabel>
    <relationshipName>Opportunity_ID_ST</relationshipName>
    <type>Lookup</type>
</CustomField>