force-app/main/default/objects/Properties_byGC__c/fields/Progress_Status_DO__c.field-meta.xml
<CustomField>
    <fullName>Progress_Status_DO__c</fullName>
    <label>設計事務所受注ステータス</label>
    <length>255</length>
    <type>Text</type>
</CustomField>