force-app/main/default/objects/Properties_byGC__c/fields/Progress_Status_GC_del__c.field-meta.xml
<CustomField>
    <fullName>Progress_Status_GC_del__c</fullName>
    <label>GC受注ステータス</label>
    <length>255</length>
    <type>Text</type>
</CustomField>