force-app/main/default/objects/Properties_byGC__c/fields/Property_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Property_Unique_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>物件名</label>
    <referenceTo>New_Property__c</referenceTo>
    <relationshipLabel>物件×GC</relationshipLabel>
    <relationshipName>Property_Unique_ID</relationshipName>
    <type>Lookup</type>
</CustomField>