force-app/main/default/objects/Properties_byGC__c/fields/Share_NG__c.field-meta.xml
<CustomField>
    <fullName>Share_NG__c</fullName>
    <label>他事業への情報共有NG指定事業名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>