force-app/main/default/objects/Properties_byGC__c/fields/TgtGC_BA__c.field-meta.xml
<CustomField>
    <fullName>TgtGC_BA__c</fullName>
    <formula>Account_ID__r.DX_ManagementTarget__c</formula>
    <label>対象GCフラグ_BuildApp</label>
    <type>Checkbox</type>
</CustomField>