force-app/main/default/objects/Properties_byGC__c/fields/TgtGC_CE__c.field-meta.xml
<CustomField>
    <fullName>TgtGC_CE__c</fullName>
    <label>対象GCフラグ_セメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>