force-app/main/default/objects/Properties_byGC__c/fields/TgtGC_EN__c.field-meta.xml
<CustomField>
    <fullName>TgtGC_EN__c</fullName>
    <formula>Account_ID__r.EN_ManagementTarget__c</formula>
    <label>対象GCフラグ_エンジ</label>
    <type>Checkbox</type>
</CustomField>