force-app/main/default/objects/Properties_byGC__c/fields/TgtGC_Owner_ID_BA__c.field-meta.xml
<CustomField>
    <fullName>TgtGC_Owner_ID_BA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先所有者ID_BA</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>物件×GC (取引先所有者ID_BA)</relationshipLabel>
    <relationshipName>OwnerId_DX</relationshipName>
    <type>Lookup</type>
</CustomField>