force-app/main/default/objects/Properties_byGC__c/fields/TgtGC_Owner_ID_EN__c.field-meta.xml
<CustomField>
    <fullName>TgtGC_Owner_ID_EN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先所有者ID_EN</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>物件×GC (取引先所有者ID_EN)</relationshipLabel>
    <relationshipName>OwnerId_EN</relationshipName>
    <type>Lookup</type>
</CustomField>