force-app/main/default/objects/Properties_byGC__c/fields/TgtGC_ST_k__c.field-meta.xml
<CustomField>
    <fullName>TgtGC_ST_k__c</fullName>
    <formula>Account_ID__r.ST_ManagementTarget__c</formula>
    <label>対象GCフラグ_スチール</label>
    <type>Checkbox</type>
</CustomField>