force-app/main/default/objects/Properties_byGC__c/fields/WAO_ID_CE__c.field-meta.xml
<CustomField>
    <fullName>WAO_ID_CE__c</fullName>
    <label>WAO_プロジェクト番号_セメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>