force-app/main/default/objects/Properties_byGC__c/fields/WAO_Name_CE__c.field-meta.xml
<CustomField>
    <fullName>WAO_Name_CE__c</fullName>
    <label>WAO_現場名_セメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>